Getting data from planets.nu
updating home service to return data from planets nu and using it in home component

--- a/games/src/styles.scss
+++ b/games/src/styles.scss
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+.fade-in {
+  opacity: 1;
+  animation: fadein 2s;
+  -webkit-animation: fadein 2s;
+}
+
+.invisible {
+  opacity: 0;
+}
