--- a/games/src/app/home/home.component.html
+++ b/games/src/app/home/home.component.html
@@ -1,1 +1,3 @@
-<p>home works!</p>
+<div class="home" *ngIf="gamesList$ | async as games" [ngClass]="[games ? 'fade-in' : 'invisible']">
+got the data
+</div>
