--- a/games/src/app/home/home.component.html
+++ b/games/src/app/home/home.component.html
@@ -1,3 +1,6 @@
 <div class="home" *ngIf="gamesList$ | async as games" [ngClass]="[games ? 'fade-in' : 'invisible']">
-got the data
+    <app-table [tableData]="games"></app-table>
+</div>
+<div *ngIf="getListError">
+    ERROR GETTING DATA
 </div>
