--- a/games/src/app/shared/table/table.component.html
+++ b/games/src/app/shared/table/table.component.html
@@ -1,18 +1,24 @@
-<table>
-    <tr>
-        <th>Name</th>
-        <th>Short Description</th>
-        <th>Date Created</th>
-        <th>Created By</th>
-        <th>Host Days</th>
-        <th>Password</th>
-    </tr>
-    <tr *ngFor="let game of tableData; index as i">
-        <td [innerHtml]="game.name"></td>
-        <td [innerHtml]="game.shortdescription"></td>
-        <td [innerHtml]="game.datecreated | customDate"></td>
-        <td [innerHtml]="game.createdby"></td>
-        <td [innerHtml]="game.hostdays"></td>
-        <td [innerHtml]="game.password"></td>
-    </tr>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Short Description</th>
+            <th>Date Created</th>
+            <th>Created By</th>
+            <th>Host Days</th>
+            <th>Password</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let game of tableData; index as i">
+            <td [innerHtml]="game.name"></td>
+            <td [innerHtml]="game.shortDescription"></td>
+            <td [innerHtml]="game.dateCreated | customDate"></td>
+            <td [innerHtml]="game.createdBy"></td>
+            <td [innerHtml]="game.hostDays"></td>
+            <td>
+                <i *ngIf="game.password" class="material-icons">lock</i>
+            </td>
+        </tr>
+    </tbody>
 </table>
